syntax = "proto3";

package jogasaki.proto.sql.schema;

import "common.proto";

option java_multiple_files = false;
option java_package = "com.tsurugidb.jogasaki.proto";
option java_outer_classname = "SchemaProtos";

/*
 * Used in ResultSet connections.
 */

/* For record meta message sent back at the beginning of the result set. */
message RecordMeta {
  message Column {
    string name = 1;
    common.AtomType type = 2;
    bool nullable = 3;
  }

  repeated Column columns = 1;
}
